deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techtalk-web
  namespace: techtalk
spec:
  selector:
    app: techtalk-web
  ports:
    - port: 80
      targetPort: 3000
